[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "pymodd"
version = "1.1.0"
description = "create and edit modd.io games in python"
readme = "README.rst"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Jeff"}
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "case-converter==1.1.0"
]

[project.urls]
repository = "https://github.com/jeff5343/pymodd"
changelog = "https://github.com/jeff5343/pymodd/releases"

[project.scripts]
pymodd = "pymodd.console_scripts.pymodd_command:main_cli"

[tool.maturin]
module-name = "pymodd._pymodd_helper"
bindings = 'pyo3'
