[package]
name = "pymodd_library_validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.4.0"
lazy_static = "1.4.0"
serde_json = "1.0"
crossterm = "0.26.0"
minreq = { version = "2.7", features = ["https-rustls"] }
